--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,22 @@
+* {
+     padding: 0;
+     margin: 0;
+ }
+.header {
+    margin-bottom: 20px;
+}
+
 .App {
-  text-align: center;
+    padding: 20px;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+li {
+    border-bottom: 1px solid #f1f1f1;
+    list-style: none;
+    padding-left: 15px;
+    width: 500px;
+    height: 50px;
+    line-height: 50px;
 }
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.done {
+    text-decoration: line-through;
 }
